# coding-workshops

./: .env.example  .gitignore  .gitmodules  .pylintrc  Dockerfile  Pipfile  README.md  docker-compose.yml  manage.py  pyproject.toml  start.sh
codingworkshops/: mutation_helpers.py  schema.py  settings.py  urls.py  utils.py  wsgi.py
codingworkshops/cream/: apps.py  mutation.py  views.py
codingworkshops/ingredients/: models.py  schema.py
codingworkshops/ingredients/migrations/: 0001_initial.py
codingworkshops/users/: models.py  mutation.py  query.py  schema.py
codingworkshops/users/fixtures/: default.yaml
codingworkshops/users/migrations/: 0001_initial.py  0002_auto_20180819_0025.py  0003_auto_20180820_1452.py  0004_remove_user_birth_date.py  0005_auto_20180822_0001.py  0006_auto_20181020_2250.py
codingworkshops/workshops/: admin.py  apps.py  models.py  mutation.py  query.py  schema.py
codingworkshops/workshops/fixtures/: nico.yaml
codingworkshops/workshops/migrations/: 0002_auto_20180820_1412.py  0003_auto_20180820_1452.py  0004_auto_20180822_0022.py  0005_workshop_author.py  0006_auto_20180912_1813.py  0007_auto_20180919_1940.py  0008_auto_20180919_1952.py  0009_auto_20180923_1747.py  0010_auto_20180924_1651.py  0011_auto_20180924_1657.py  0012_auto_20180924_2251.py  0013_auto_20180925_0037.py  (+5 more)
fable/: .gitrepo  Dockerfile  README.md  compile.js  package.json
fable/src/: FableDemo.fs  index.html
parcel-plugin-fable-cream/: .gitrepo
scripts/: build-fable-image.sh  load-initial.sh  makemigrations.sh  migrate.sh  run-django-script.sh
