[tool.poetry]
name = "codingworkshops"
version = "0.1.0"
description = ""
authors = ["Anton <antonoutkine@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7"
django = "^2.1"
psycopg2 = "^2.7"
graphene-django = "^2.2"
django-cors-headers = "^2.4"
docker = "^3.5"
requests = "^2.20"
ruamel_yaml = "^0.15.74"

[tool.poetry.dev-dependencies]
pylint-django = "^2.0"
pylint = "^2.1"
yapf = "^0.24.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
